--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="container header-container">
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-md-3 header-left">
-      <span class="profile-img" style="background-image: url({{ site.about_profile_image | relative_url }})"></span>
+      <img class="profile-img" src="{{ site.about_profile_image | relative_url }}" alt="{{site.title}} Profile Image">
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
       <h1>{{ site.name | escape }}</h1>
