--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,6 +37,13 @@
             </a>
           </li> 
         {%- endif -%}
+        {%- if site.medium_username -%}
+          <li>
+            <a title="Medium" target="_blank" href="https://medium.com/@{{ site.medium_username| escape }}" class="button button--sacnite button--round-l">
+              <i class="fa-brands fa-medium" title="Medium"></i>
+            </a>
+          </li>
+        {%- endif -%}
       </ul>
     </div>
   </div>
