--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <meta name="description" content="{{ site.meta_description }}">
   <meta name="author" content="{{ site.name }}">
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="{{ site.meta_keyword1 }}, {{ site.meta_keyword2 }}, {{ site.meta_keyword3 }}, {{ site.meta_keyword4 }}, {{ site.meta_keyword5 }}, {{ site.meta_keyword6 }}, {{ site.meta_keyword7 }}">
+  <meta name="keywords" content="{{ site.meta_keyword1 }}, {{ site.meta_keyword2 }}, {{ site.meta_keyword3 }}, {{ site.meta_keyword4 }}, {{ site.meta_keyword5 }}">
   
   <meta property="og:title" content="{{ site.name }}">
   <meta property="og:locale" content="en_US">
