--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 
   <link rel="canonical" href="https://{{ site.meta_url }}/">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
-  <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
+  <link rel="icon" href="{{ '/favicon.ico?v=2' | relative_url }}" type="image/x-icon">
 
   <script type="application/ld+json">
   {
