--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,10 +28,11 @@
     "url": "https://{{ site.meta_url }}/",
     "image": "{{ site.meta_img }}",
     "sameAs": [
-      "https://orcid.org/{{ site.orcid_username | escape }}",
-      "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
-      "https://github.com/{{ site.github_username| cgi_escape | escape }}",
-      "https://linkedin.com/in/{{ site.in_username| cgi_escape | escape }}"
+      "https://orcid.org/{{ site.orcid_username | escape }}/",
+      "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}/",
+      "https://github.com/{{ site.github_username | escape }}/",
+      "https://linkedin.com/in/{{ site.in_username | escape }}/"
+      "https://medium.com/@{{ site.medium_username | escape }}/"
     ],
     "jobTitle": "{{ site.title }}"
   }
