--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,17 @@
       "https://linkedin.com/in/{{ site.in_username | escape }}/",
       "https://medium.com/@{{ site.medium_username | escape }}/"
     ],
-    "jobTitle": "{{ site.title }}"
+    "jobTitle": "{{ site.title }}",
+    "description": "{{ site.meta_description }}",
+    "email": "{{ site.email }}",
+    "lastUpdate": "{{ site.last_update }}",
+    "keywords": [
+    "site.meta_keyword1",
+    "site.meta_keyword2",
+    "site.meta_keyword3",
+    "site.meta_keyword4",
+    "site.meta_keyword5"
+    ]
   }
   </script>
 </head>
