--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:description" content="{{ site.meta_description }}">
   <meta property="og:url" content="https://{{ site.meta_url }}/">
-  <meta property="og:site_name" content="{{ site.title }}">
+  <meta property="og:site_name" content="{{ site.name }}">
   <meta property="og:type" content="website">
   <meta property="og:image" content="{{ site.meta_img }}">
 
