--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,7 @@
       "https://orcid.org/{{ site.orcid_username | escape }}/",
       "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}/",
       "https://github.com/{{ site.github_username | escape }}/",
-      "https://linkedin.com/in/{{ site.in_username | escape }}/",
-      "https://medium.com/@{{ site.medium_username | escape }}/"
+      "https://linkedin.com/in/{{ site.in_username | escape }}/"
     ],
     "jobTitle": "{{ site.title }}",
     "description": "{{ site.meta_description }}",
