--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
     "image": "{{ site.meta_img }}",
     "sameAs": [
       "https://orcid.org/{{ site.orcid_username | escape }}/",
-      "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}/",
+      "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
       "https://github.com/{{ site.github_username | escape }}/",
       "https://linkedin.com/in/{{ site.in_username | escape }}/"
     ],
