--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -4,12 +4,12 @@
     <div class="publication-details">
       {% if item.link %}
         <a href="{{ item.link }}" class="external-link" target="_blank" title="Link to publication">
-          <i class="fas fa-link">  </i>
+          <i class="fas fa-link"></i>
         </a>
       {% endif %}
-      <span class="authors" style="font-size: 16px;">{{ item.authors | strip }}</span>
+      <span class="authors" style="font-size: 16px;">&nbsp;{{ item.authors | strip }}</span>
       <i class="publication-title" style="font-size: 16px;">{{ item.title | strip | escape }}</i>
-      <span class="journal" style="font-size: 16px;">{{ item.journal | strip }} &nbsp;</span>
+      <span class="journal" style="font-size: 16px;">{{ item.journal | strip }}</span>
     </div>
   </div>
   <br>
