--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -7,7 +7,7 @@
           <i class="fas fa-link"></i>
         </a>
       {% endif %}
-      <span class="authors" style="font-size: 16px;">&nbsp; &nbsp;{{ item.authors | strip }}</span>
+      <span class="authors" style="font-size: 16px;">&nbsp;{{ item.authors | strip }}</span>
       <i class="publication-title" style="font-size: 16px;">{{ item.title | strip | escape }}</i>
       <span class="journal" style="font-size: 16px;">{{ item.journal | strip }}</span>
     </div>
